Use S3 storage for images instead of DB
