# valo-mapper-api/routes/image.go
@@ -1,0 +1,12 @@
+package routes
+
+import (
+	"valo-mapper-api/handlers"
+
+	"github.com/gorilla/mux"
+)
+
+func RegisterImageRoutes(r *mux.Router) {
+	r.HandleFunc("/api/images/upload", handlers.UploadImage).Methods("POST")
+	r.HandleFunc("/api/images/object", handlers.GetImage).Methods("GET")
+}
